fix: z-index 수정

--- a/app/globals.css
+++ b/app/globals.css
@@ -417,11 +417,6 @@ thead tr th:last-child {
   }
 }
 
-/* 코드 블럭의 z-index 조정 */
-.prose pre {
-  position: relative;
-  z-index: 5; /* 배경보다 낮은 값을 설정 */
-}
 figure {
   position: relative;
   z-index: 5; /* 배경보다 낮은 값을 설정 */
